--- a/Fase 3/estilos.css
+++ b/Fase 3/estilos.css
@@ -144,3 +144,34 @@ h1 {
     overflow: hidden;
 
 }
+.contenedor {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+
+}
+.content-item1 {
+  background: lightseagreen;
+  padding: 5px;
+  width: 900px;
+  height: 150px;
+  margin-top: 30px;
+  line-height: 150px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 2.2em;
+  text-align: center;
+}
+
+.content-item2 {
+  background: lightslategrey;
+  padding: 5px;
+  width: 900px;
+  height: 150px;
+  margin-top: 30px;
+  line-height: 150px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 2.2em;
+  text-align: center;
+}
